Fixed spacing issue with sharing modal

--- a/style.css
+++ b/style.css
@@ -794,10 +794,6 @@ video {
   --tw-gradient-to: #2563eb;
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
 .p-6 {
   padding: 1.5rem;
 }
